Fix Overflow error

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 .box {
   display: grid;
   font-size: 1.5rem;
+  gap: 1rem;
   padding: 1em;
   width: 15rem;
   border-radius: 16px;
@@ -24,7 +25,7 @@ body {
   margin-top: 20px;
   margin-bottom: 20px;
   display: flex;
-  height: auto;
+  height: 100vh;
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
@@ -91,4 +92,15 @@ form input {
   padding: 0.5rem;
   font-size: 1.8rem;
   width: 100%;
+}
+footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+footer a img {
+  width: 3rem;
+}
+.repair {
+  overflow: hidden;
 }
